About: A p5.js tropical cyclone simulation game

v20190131a:
    + Added some more data compression functions for aiding in saving/loading
    * Environmental field data for analysis is now structured per-season to make loading more efficient
v20190129b:
    * Fixed graphical glitch where generating a new basin after returning to the main menu rendered the new basin's land on top of the old basin's land
    * Changed the "Back" button in the basin creation menu to a "Cancel" button in a more nice-looking position
v20190129a:
    + Added "Save* and Return to Main Menu" button in the in-sim menu
    + Added "Back" button in basin creation menu
v20190128a:
    + Added WIP menu in-sim for accessing various settings and features in upcoming updates
    * Saving/loading now checks save format number for compatibility
v20190101a:
    * Saving/loading test now autosaves partial basin data such as hemisphere and start year
v20181231a:
    * Optimized data compression functions
    * A few other preparations for adding saving/loading
v20181225a:
    + Added a couple functions for data compression purposes for saving/loading
v20181222a:
    + Added a basic test for basin saving/loading
        > Saves just the seed of the latest basin generated
        > The "'Load' From Seed (test)" button uses the saved seed to generate a new basin (does nothing if no seed is saved)
v20181218a:
    + Added a basin setting for the starting year of a simulation
        > The default of "Current year" is the current Jan-Dec year for NHem and Jul-Jun year for SHem
v20181217a:
    + Added damage and deaths, including counters in storm and season stats
        > The damage/deaths algorithm is rudimentary and may need change
v20181216a:
    + Added "Total ACE" counter to season stats
v20181215a:
    + Added "Jump to" button to side panel, which (while paused) "jumps" analysis to a specific point
        > In season stats, jumps to the beginning of the targeted year